# SIGMOD2023

./: Data.xlsx  Readme
Code/: config.txt  main.cpp  readme.txt
Code/Adaptive/: adaptive.cpp
Code/Combination/: Combination.cpp
Code/Experiment/: CMakeLists.txt  main.cpp
Code/Experiment/Adaptive/: adaptive.h
Code/Experiment/Combination/: Combination.h
Code/Experiment/Others/: operation.cpp
Code/Experiment/Ranking/: active_ranking.cpp  active_ranking.h
Code/Experiment/Separation/: Separation.cpp  Separation.h
Code/Experiment/Tree/: Tree.cpp  Tree.h
Code/Experiment/UH/: maxUtility.cpp  maxUtility.h
Code/Experiment/input/: Nursery.txt  car.txt  special(c=10).txt  special(c=4).txt
Code/Experiment/output/: ext_pt.txt  hyperplane_data.txt
Code/Experiment/structure/: Ctree.cpp  L.h  cluster_h.h  cluster_t.h  data_utility.cpp  define.h  hyperplane.h  inequality.cpp  point_set.cpp  point_t.cpp  point_t.h  r_node.cpp  r_node.h  rnode_tree.h  s_node.h  tuple_set.h  tuple_t.cpp  tuple_t.h
Code/Groudtruth/: Groundtruth.cpp
Code/Others/: lp.cpp  lp.h  operation.h  pruning.cpp  pruning.h
Code/Qhull/: qhull_build.h
Code/UserStudy/: Combination.h  Groundtruth.h  readme.txt
Code/UserStudy/Adaptive/: adaptive.cpp  adaptive.h
Code/UserStudy/Others/: operation.cpp  pruning.cpp  pruning.h
Code/UserStudy/Ranking/: active_ranking.cpp
Code/UserStudy/Result/: result.txt
Code/UserStudy/UH/: maxUtility.h
Code/UserStudy/input/: car2.txt
Code/UserStudy/output/: ext_pt.txt
Code/UserStudy/structure/: Ctree.h  L.cpp  cluster_t.cpp  hyperplane_set.cpp  hyperplane_set.h  point_set.h  point_t.h  r_node.cpp  rnode_tree.cpp  rtree.cpp  s_node.cpp  tuple_set.cpp  tuple_set.h  tuple_t.cpp
Code/input/: general(c=10).txt  general(c=4).txt
Code/structure/: Ctree.h  cluster_t.cpp  hyperplane.cpp  hyperplane_set.cpp  hyperplane_set.h  point_set.h  relational_graph.cpp  relational_graph.h  tuple_set.cpp  valueArray.cpp  valueArray.h
UserStudy/: CMakeLists.txt  Combination.cpp  Separation.cpp  Separation.h  main.cpp
UserStudy/Others/: operation.h
UserStudy/Ranking/: active_ranking.h
UserStudy/UH/: maxUtility.cpp
UserStudy/input/: car1.txt
UserStudy/output/: hyperplane_data.txt
UserStudy/structure/: Ctree.cpp  cluster_h.cpp  cluster_t.h  data_utility.h  define.h  inequality.h  point_set.cpp  point_t.cpp  tuple_t.h
